new reward function

--- a/AdjointPlugin7Metalens.ipynb
+++ b/AdjointPlugin7Metalens.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:26.506739Z",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.346378Z",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.371454Z",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.399033Z",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.429393Z",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.795984Z",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.831433Z",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.862048Z",
@@ -475,13 +475,13 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">16:18:18 CST </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING: Override structures take no effect along x-axis. If       </span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">15:29:29 CST </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING: Override structures take no effect along x-axis. If       </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #800000; text-decoration-color: #800000\">intending to apply override structures to this axis, use           </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #008000; text-decoration-color: #008000\">'AutoGrid'</span><span style=\"color: #800000; text-decoration-color: #800000\">.                                                        </span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m16:18:18 CST\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING: Override structures take no effect along x-axis. If       \u001b[0m\n",
+       "\u001b[2;36m15:29:29 CST\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING: Override structures take no effect along x-axis. If       \u001b[0m\n",
        "\u001b[2;36m             \u001b[0m\u001b[31mintending to apply override structures to this axis, use           \u001b[0m\n",
        "\u001b[2;36m             \u001b[0m\u001b[32m'AutoGrid'\u001b[0m\u001b[31m.                                                        \u001b[0m\n"
       ]
@@ -558,13 +558,13 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">16:18:20 CST </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING: Override structures take no effect along x-axis. If       </span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">15:29:33 CST </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING: Override structures take no effect along x-axis. If       </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #800000; text-decoration-color: #800000\">intending to apply override structures to this axis, use           </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #008000; text-decoration-color: #008000\">'AutoGrid'</span><span style=\"color: #800000; text-decoration-color: #800000\">.                                                        </span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m16:18:20 CST\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING: Override structures take no effect along x-axis. If       \u001b[0m\n",
+       "\u001b[2;36m15:29:33 CST\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING: Override structures take no effect along x-axis. If       \u001b[0m\n",
        "\u001b[2;36m             \u001b[0m\u001b[31mintending to apply override structures to this axis, use           \u001b[0m\n",
        "\u001b[2;36m             \u001b[0m\u001b[32m'AutoGrid'\u001b[0m\u001b[31m.                                                        \u001b[0m\n"
       ]
@@ -694,13 +694,13 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">16:18:21 CST </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING: Override structures take no effect along x-axis. If       </span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING: Override structures take no effect along x-axis. If       </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #800000; text-decoration-color: #800000\">intending to apply override structures to this axis, use           </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">             </span><span style=\"color: #008000; text-decoration-color: #008000\">'AutoGrid'</span><span style=\"color: #800000; text-decoration-color: #800000\">.                                                        </span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m16:18:21 CST\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING: Override structures take no effect along x-axis. If       \u001b[0m\n",
+       "\u001b[2;36m            \u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING: Override structures take no effect along x-axis. If       \u001b[0m\n",
        "\u001b[2;36m             \u001b[0m\u001b[31mintending to apply override structures to this axis, use           \u001b[0m\n",
        "\u001b[2;36m             \u001b[0m\u001b[32m'AutoGrid'\u001b[0m\u001b[31m.                                                        \u001b[0m\n"
       ]
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,17 +826,22 @@
     "    ratio_2 = 1/2\n",
     "    ratio_3 = 1/4\n",
     "\n",
-    "    r1 = m1\n",
-    "    r2 = m2 /2\n",
-    "    r3 = m3\n",
-    "    ratio_penalty = (r1 / r2 - 1) ** 2 + (r2 / r3 - 1) ** 2\n",
+    "    r1 = 10 * (m1/total_intensity)/ratio_1\n",
+    "    r2 = 10 * (m2/total_intensity)/ratio_2\n",
+    "    r3 = 10 * (m3/total_intensity)/ratio_3\n",
+    "    r4 = (m1 + m2 + m3) - total_intensity\n",
+    "    \n",
+    "    #r1 = m1\n",
+    "    #r2 = m2 /2\n",
+    "    #r3 = m3\n",
+    "    #ratio_penalty = (r1 / r2 - 1) ** 2 + (r2 / r3 - 1) ** 2\n",
     "    # r1 = ((m1/total_intensity) - ratio_1) ** 2\n",
     "    # r2 = ((m2/total_intensity) - ratio_2) ** 2\n",
     "    # r3 = ((m3/total_intensity) - ratio_3) ** 2\n",
     "    # Weighted reward with penalty\n",
-    "    reward = m1 + m2 + m3 - lambda_ * ratio_penalty\n",
+    "    # reward = m1 + m2 + m3 - lambda_ * ratio_penalty\n",
     "    # return -10*(r1+r2+r3) +total_intensity\n",
-    "    return reward\n",
+    "    return r1 + r2 + r3 + r4\n",
     "    #Also Subtract some penalty at the end? Like the abs val of difference betweens actual and desired rations * big number\n",
     "\n",
     "def J(params) -> float:\n",
@@ -856,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +870,7 @@
        "Array(2153.04665029, dtype=float64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,11 +1178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'params_history' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m params_after \u001b[38;5;241m=\u001b[39m \u001b[43mparams_history\u001b[49m[\u001b[38;5;241m17\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'params_history' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "params_after = params_history[-1]"
+    "params_after = params_history[17]"
    ]
   },
   {
