fixed monitor size

--- a/AdjointPlugin7Metalens.ipynb
+++ b/AdjointPlugin7Metalens.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-08-19T03:36:28.862048Z",
@@ -432,7 +432,7 @@
     "\n",
     "monitor_full = td.FieldMonitor(\n",
     "    center=[0.0, 0.0, focal_z],\n",
-    "    size=[0.25, 0.25, 0],\n",
+    "    size=[length_xy, length_xy, 0],\n",
     "    freqs=[f0],\n",
     "    name=\"total_intensity\",\n",
     "    fields=fields,\n",
